@@ -118,8 +118,8 @@ dependencies {
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
     compile 'de.timroes.android:EnhancedListView:0.3.2@aar'
     compile 'com.google.android.gms:play-services:+'
-    compile 'org.twitter4j:twitter4j-core:4.0.1'
-    compile 'org.twitter4j:twitter4j-stream:4.0.1'
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'org.twitter4j:twitter4j-stream:4.0.2'
     compile 'org.lucasr.smoothie:smoothie:0.1.0'
 
     compile files('lib/httpmime-4.3.2.jar')
