@@ -126,6 +126,7 @@
     <string-array name="attach_options">
         <item>@string/take_picture</item>
         <item>@string/from_file</item>
+        <item>@string/attach_gif</item>
     </string-array>
 
     <string-array name="font_type">
