@@ -625,5 +625,6 @@
     <string name="pick_time">Pick Time</string>
     <string name="pick_date">Pick Date</string>
     <string name="both_accounts">Both Accounts</string>
+    <string name="attach_gif">Animated GIF</string>
 
 </resources>
