@@ -1,6 +1,8 @@
 <b>Version 2.6.0:</b><br/><br/>
     &#8226; New compose window<br/>
-    &#8226; Small changes for sending pictures<br/>
+    &#8226; Post tweets with animated GIFs (Twitter doesn't support viewing yet)<br/>
+    &#8226; Upload multiple images to twitters native hosting<br/>
+    &#8226; Small changes for sending normal pictures<br/>
 <br/><br/>
 
 <b>Version 2.5.4:</b><br/><br/>
